--- a/g3doc/tutorials/graph_keras_mlp_cora.ipynb
+++ b/g3doc/tutorials/graph_keras_mlp_cora.ipynb
@@ -858,11 +858,12 @@
     "colab": {
       "name": "Graph regularization for document classification using natural graphs",
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
